--- a/_includes/carousel_catalog.html
+++ b/_includes/carousel_catalog.html
@@ -11,12 +11,12 @@
     
         {% for unternehmen in site.data.catalog %}
         <div class="carousel-item {% if forloop.first == true %}active{% endif %}">
-            <div class="container-grid">
+            <div class="container-grid-{{unternehmen.ad_format}}">
 
 
                 <!-- <h2>Unternehmen PhysiKon 2022</h2> -->
                   <div class="cat-logo">
-                    <img src={{unternehmen.logo}} alt="" style="max-width:100%;max-height:100%">
+                    <img src={{unternehmen.logo}} alt="" style="max-width:100%;max-height:100%;margin:auto">
                   </div>
                   <div class="cat-contact">
                     <h6> Kontakt </h6>
