New order in the navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,31 +1,38 @@
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-md bg-secondary fixed-top text-uppercase" id="mainNav">
-      <div class="container">
+<!-- Navigation -->
+<nav class="navbar navbar-expand-md bg-secondary fixed-top text-uppercase" id="mainNav">
+  <div class="container">
 
 
-        <a class="navbar-brand js-scroll-trigger bg-secondary" href="/index.html">
-          <img src="img/logos-physikon/logo-pfeil-gruen-inverse.svg" alt="" style="width: 100%">
-        </a>
+    <a class="navbar-brand js-scroll-trigger bg-secondary" href="/index.html">
+      <img src="img/logos-physikon/logo-pfeil-gruen-inverse.svg" alt="" style="width: 100%">
+    </a>
 
-        <!-- Navbar (mobile) -->
-        <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
+    <!-- Navbar (mobile) -->
+    <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button"
+      data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <i class="fas fa-bars"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
 
-          <!-- Navbar Items-->
-         <ul class="navbar-nav ml-auto">
-           <li class="nav-item mx-1 mx-lg-1">
-             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://pep-dortmund.org/jobboerse/" target="_blank" rel="noopener noreferrer">Jobbörse</a>
-           <li class="nav-item mx-1 mx-lg-3">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="online_katalog.html">Online Katalog 2022</a>
-            <li class="nav-item mx-1 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="katalog.html">Archiv</a>
-            <li class="nav-item mx-1 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="vortraege.html">Programm</a>
-            <li class="nav-item mx-1 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="exhibitors.html">Für Unternehmen</a>
-          </ul>
-        </div>
-      </div>
-    </nav>
+      <!-- Navbar Items-->
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item mx-1 mx-lg-1">
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://pep-dortmund.org/jobboerse/"
+            target="_blank" rel="noopener noreferrer">Jobbörse</a>
+        <li class="nav-item mx-1 mx-lg-3">
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="online_katalog.html">Online Katalog
+            2022</a>
+        <li class="nav-item mx-1 mx-lg-1">
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="katalog.html">Archiv</a>
+        <li class="nav-item mx-1 mx-lg-1">
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="vortraege.html">Programm</a>
+        <li class="nav-item mx-1 mx-lg-1">
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="exhibitors.html">Für Unternehmen</a>
+        <li class="nav-item mx-1 mx-lg-1">
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://pep-dortmund.org/jobboerse/"
+            target="_blank" rel="noopener noreferrer">Jobbörse</a>
+      </ul>
+    </div>
+  </div>
+</nav>
