--- a/_includes/katalog.html
+++ b/_includes/katalog.html
@@ -1,21 +1,18 @@
 <div class="container pt-5">
-  <h2 class="h2-fontsize  py-5">Messekatalog zur PhysiKon 2022</h2>
+  <h3>Messekatalog zur PhysiKon 2022</h3>
+  
   <p style="font-size: 1.2rem">
-  Hier wird in Kürze der Messekatalog zur PhyiKon 2022 
+  Hier wird in Kürze der Messekatalog zur PhysiKon 2022 
   erscheinen. Zudem können alle bisherigen Messekataloge vergangener Jobmessen heruntergeladen werden.</p>
-</div>
 
-<div class="container pt-5">
-  <h3 class="mt-2">Kontakt</h3>
+  <h5>Kontakt</h5>
   <p style="font-size: 1.2rem">
   Bei Anmerkungen zum Katalog, melden Sie sich unter <a href="mailto:physikon@pep-dortmund.org">physikon@pep-dortmund.org</a>.
   <br>
   Wir freuen uns auf Ihre Fragen und Anmerkungen.</p>
 </div>
-
-
 <div class="container pt-5">
-  <h2 class="h2-fontsize  py-5">Archiv</h2>
+  <h2>Archiv</h2>
 </div>
 <hr class="star-dark">
 
