--- a/_includes/katalog_2021.html
+++ b/_includes/katalog_2021.html
@@ -1,13 +1,12 @@
 <div class="container pt-5">
-  <div class="row">
-    <div class="col-5">
-      <h2 class="h2-fontsize py-5">PhysiKon 2021</h2>
+  <div class="row justify-content-center">
+    <div class="col text-center">
+      <h2 class="h2-fontsize">PhysiKon 2021</h2>
         <a href="/documents/2021_Physikon_Katalog_online.pdf">
           <img style="size: 100%" src="documents/2021_Physikon_Katalog_online_Titel.png" alt="">
         </a>
     </div>
 
-    <div class="justify-content-center">
       <div class="row">
       {% for unternehmen in site.data.historic.unternehmen_2021 %}
         <div class="col-xl-3 col-md-4 col-4 grid-col">
@@ -18,8 +17,14 @@
           </a>
         </div>
       {% endfor %}
+      <div class="col-xl-3 col-md-4 col-4 grid-col"></div>
+      <div class="col-xl-3 col-md-4 col-4 grid-col"></div>
+      <div class="col-xl-3 col-md-4 col-4 grid-col"></div>
+      <div class="col-xl-3 col-md-4 col-4 grid-col"></div>
+      <div class="col-xl-3 col-md-4 col-4 grid-col"></div>
+      <div class="col-xl-3 col-md-4 col-4 grid-col"></div>
+
       </div>
-    </div>
 
   </div>
 </div>
