--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,10 +2,11 @@
 
 <div class="jumbotron jumbotron-fluid physikon-jumbotron px-3 text-white text-center">
   <img class="header-logo" src="img/logos-physikon/logo-pfeil-gruen.svg" alt="PhysiKon">
-  <h2 class="gray">25. - 27.04.22 Online-Vorträge <br> 
-    <A href="vortraege.html">13-18Uhr, Zoom</A>  <br><br> 
-    28.04.22 Jobmesse <br> 
-  10-16Uhr, Emil-Figge-Str. 50, TU Dortmund</h2>
+  <h2 class="gray">25. - 27.04.22 Online-Vorträge <br>
+    <A href="programm.html">13-18Uhr, Zoom</A> <br><br>
+    28.04.22 Jobmesse <br>
+    10-16Uhr, Emil-Figge-Str. 50, TU Dortmund
+  </h2>
 </div>
 
 <header class="container-fluid masthead bg-primary text-white text-center pt-4">
@@ -27,7 +28,8 @@
 
     <div class="col-12 col-lg-4 mt-2">
       <p class="font-weight-light">
-        Du bist auf dem Weg Elektrotechniker:in, Informatiker:in, oder Ingenieur:in zu werden und interessierst dich für unsere Aussteller?
+        Du bist auf dem Weg Elektrotechniker:in, Informatiker:in, oder Ingenieur:in zu werden und interessierst dich für
+        unsere Aussteller?
       </p>
     </div>
   </div>
