--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -26,7 +26,7 @@
         <li class="nav-item mx-1 mx-lg-1">
           <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="katalog.html">Archiv</a>
         <li class="nav-item mx-1 mx-lg-1">
-          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="vortraege.html">Programm</a>
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="programm.html">Programm</a>
         <li class="nav-item mx-1 mx-lg-1">
           <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="exhibitors.html">Für Unternehmen</a>
         <li class="nav-item mx-1 mx-lg-1">
