--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -28,7 +28,7 @@
         <li class="nav-item mx-1 mx-lg-1">
           <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="programm.html">Programm</a>
         <li class="nav-item mx-1 mx-lg-1">
-          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="exhibitors.html">Für Unternehmen</a>
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="unternehmen.html">Für Unternehmen</a>
         <li class="nav-item mx-1 mx-lg-1">
           <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://pep-dortmund.org/jobboerse/"
             target="_blank" rel="noopener noreferrer">Jobbörse</a>
