--- a/_includes/information.html
+++ b/_includes/information.html
@@ -5,38 +5,48 @@
 <!-- Information Header -->
 <!-- <h2 class="text-center text-white text-uppercase mb-0 h2-fontsize">Informationen</h2> -->
 <hr class="star-light">
-<h2 class="text-white mb-5 "> Die PhysiKon 2021 findet digital statt!</h2>
+<h2 class="text-white mb-5 "> Die PhysiKon 2022 findet online und in Präsenz statt!</h2>
 <br>
+<h3>Für die Online Vorträge müsst ihr euch einmalig registrieren!</h3>
 <!-- <h2 class="text-white text-uppercase mb-0 h2-fontsize"> Hier registrieren:  </h2> -->
-<!-- <button onclick="https://t1p.de/PhysiKon2021" class="text-uppercase mb-0 h2-fontsize" > Hier anmelden!</button> -->
-
-<form action="https://t1p.de/PhysiKon2021">
-  <input type="submit" value="Anmeldung Zoom" class="text-uppercase mb-0 h2-fontsize"/>
+<form action="https://tu-dortmund.zoom.us/meeting/register/tJcrduyrqjsvGNY2hORq-oBAoQMhVFmooIjU">
+  <input type="submit" value="Hier anmelden!" class="text-uppercase mb-0 h2-fontsize"/>
 </form>
 
+<h3>Für die Teilnahme an der Präsenzmesse am Campus der TU Dortmund ist keine Anmeldung nötig. Kommt einfach vorbei!</h3>
+<h3>Die PhysiKon ist kostenlos!</h3>
 
-<br>
+
+
+
+
+
+<!-- <br>
 <h3 class="text-white text-uppercase mb-0 h3-fontsize"> Der Vortrag des Bundesamts für Verfassungsschutz findet über Webex statt: </h3>
-<!-- <a href="https://tu-dortmund.webex.com/tu-dortmund/j.php?MTID=m445a00c143396214aa501ed2baf31f50" class="text-white text-uppercase mb-0 h2-fontsize" > Hier anmelden!</a> -->
+<a href="https://tu-dortmund.webex.com/tu-dortmund/j.php?MTID=m445a00c143396214aa501ed2baf31f50" class="text-white text-uppercase mb-0 h2-fontsize" > Hier anmelden!</a>
 <br>
 <form action="https://t1p.de/PhysiKon2021-BfV">
   <input type="submit" value="Anmeldung Webex" class="text-uppercase mb-0 h2-fontsize"/>
-</form>
+</form> -->
 
 
 <br>
   <div class="row pb-5">
     <div class="col-sm">
       <h3><i class="fas fa-location-arrow"></i> Ort</h3>
-      <p><h5>Zoom & Webex</h5></p>
+      <p><h5>
+        TU Dortmund <br>
+        Emil-Figge-Straße 50 <br>
+        44227 Dortmund
+      </h5></p>
     </div>
     <div class="col-sm">
       <h3><i class="fas fa-calendar-alt"></i> Datum</h3>
-      <p><h5> 19. - 23. April 2021</h5>
+      <p><h5> 25. - 28. April 2022</h5>
     </div>
     <div class="col-sm">
       <h3><i class="fas fa-clock"></i> Uhrzeit</h3>
-      <p><h5> täglich 16 - 18 Uhr</h5></p>
+      <p><h5> Online: <br>25./26. April: 14 - 18 Uhr<br> 27. April: 13 - 18 Uhr<br> Messetag: <br> 28. April: 10 - 16 Uhr</h5></p>
     </div>
   </div>
 
