--- a/_includes/programm.html
+++ b/_includes/programm.html
@@ -11,49 +11,47 @@
 
   <h3>Programm </h3>
   <p style="font-size: 1.2rem">
-        Zusätzlich zu der Jobmesse am 28.04.22 auf dem Campus der TU Dortmund, 
-        bieten 
-        wir ein breites Online Angebot an. Hier haben Unternehmen 
-        eine Stunde Zeit sich euch im Rahmen eines Vortrags via Zoom 
-        vorzustellen und ihr könnt Fragen stellen.
-        Der Zeitplan für das Onlineangebot:
-      
+        Zusätzlich zu der Jobmesse am 28.04.22 auf dem Campus der TU Dortmund bieten wir ein breites Online-Angebot an.
+        Hier haben Unternehmen eine Stunde Zeit sich euch im Rahmen eines Vortrags via <A href="https://tu-dortmund.zoom.us/meeting/register/tJcrduyrqjsvGNY2hORq-oBAoQMhVFmooIjU"> Zoom</A> vorzustellen.
+        Ihr habt hier die Gelegenheit die Aussteller schon mal kennen zu lernen und sie mit Fragen zu löchern.
+
+
 <table class="styled-table">
   
   <thead>
   <tr>
     <th>Zeit</th>
-    <th>25.04.22</th>
-    <th>26.04.22</th>
-    <th>27.04.22</th>
+    <th>25.04.2022</th>
+    <th>26.04.2022</th>
+    <th>27.04.2022</th>
   </tr>
   </thead>
   <tr>
-    <td>13-14Uhr</td>
+    <td>13-14 Uhr</td>
     <td></td>
     <td></td>
     <td>Schulministerium NRW</td>
   </tr>
   <tr>
-    <td>14-15Uhr</td>
+    <td>14-15 Uhr</td>
     <td>CGI</td>
     <td>Point 8</td>
     <td>Deichmann</td>
   </tr>
   <tr>
-    <td>15-16Uhr</td>
+    <td>15-16 Uhr</td>
     <td>RTL</td>
     <td>Ritzenhoefer & Company</td>
     <td>Forschungszentrum Jülich</td>
   </tr>
   <tr>
-    <td>16-17Uhr</td>
+    <td>16-17 Uhr</td>
     <td>Amprion</td>
     <td>Infineon</td>
     <td>NRW.BANK</td>
   </tr>
   <tr>
-    <td>17-18Uhr</td>
+    <td>17-18 Uhr</td>
     <td>Elmos</td>
     <td>zeb</td>
     <td>TNG Consulting</td>
