--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,10 +2,10 @@
 
 <div class="jumbotron jumbotron-fluid physikon-jumbotron px-3 text-white text-center">
   <img class="header-logo" src="img/logos-physikon/logo-pfeil-gruen.svg" alt="PhysiKon">
-  <h2 class="gray">25. - 27.04.22 Online-Vorträge <br>
-    <A href="programm.html">13-18Uhr, Zoom</A> <br><br>
-    28.04.22 Jobmesse <br>
-    10-16Uhr, Emil-Figge-Str. 50, TU Dortmund
+  <h2 class="gray">25. - 27. April 2022 <A href="programm.html"> Online Vorträge</A> <br>
+    13 - 18 Uhr <br> <A href="https://tu-dortmund.zoom.us/meeting/register/tJcrduyrqjsvGNY2hORq-oBAoQMhVFmooIjU"> Zoom</A> <br><br>
+    28. April 2022 Jobmesse <br>
+    10 - 16 Uhr <br> TU Dortmund, Emil-Figge-Str. 50, 44227 Dortmund
   </h2>
 </div>
 
