update times, url in program

--- a/_includes/programm.html
+++ b/_includes/programm.html
@@ -28,33 +28,33 @@
   </thead>
   <tr>
     <td>13-14 Uhr</td>
-    <td></td>
-    <td></td>
-    <td>Schulministerium NRW</td>
+    <td> <a href="ttps://www.bosch.de">Bosch</a></td>
+    <td> <a href="https://www.cohausz-florack.de">Cohausz&Florack</a></td>
+    <td> <a href="https://www.lehrer-werden.nrw/was-bringst-du-mit/seiteneinsteiger">Schulministerium NRW</a></td>
   </tr>
   <tr>
     <td>14-15 Uhr</td>
-    <td>CGI</td>
-    <td>Point 8</td>
-    <td>Deichmann</td>
+    <td> <a href="https://www.cgi.com/de" >CGI </a></td>
+    <td> <a href="https://point-8.de/" >Point 8 </a></td>
+    <td> <a href="https://www.deichmann-karriere.de/jobsuche/?" >Deichmann </a></td>
   </tr>
   <tr>
     <td>15-16 Uhr</td>
-    <td>RTL</td>
-    <td>Ritzenhoefer & Company</td>
-    <td>Forschungszentrum Jülich</td>
+    <td> <a href="https://rtl.com/jobs">RTL</a></td>
+    <td> <a href="https://www.ritzenhoefer.com/">Ritzenhoefer & Company</a></td>
+    <td> <a href="https://www.fz-juelich.de/portal/DE/Karriere">Forschungszentrum Jülich</a></td>
   </tr>
   <tr>
     <td>16-17 Uhr</td>
-    <td>Amprion</td>
-    <td>Infineon</td>
-    <td>NRW.BANK</td>
+    <td> <a href="https://www.amprion.net/">Amprion</a></td>
+    <td> <a href="https://www.infineon.com/cms/de/">Infineon</a></td>
+    <td> <a href="https://www.nrwbank.de/de/die-nrw-bank/karriere/">NRW.BANK</a></td>
   </tr>
   <tr>
     <td>17-18 Uhr</td>
-    <td>Elmos</td>
-    <td>zeb</td>
-    <td>TNG Consulting</td>
+    <td><a href="https://www.elmos.com/">Elmos</a></td>
+    <td><a href="https://zeb-consulting.com">zeb</a></td>
+    <td><a href="https://www.tngtech.com">TNG Consulting</a></td>
   </tr>
 </table>
 
