--- a/_includes/information.html
+++ b/_includes/information.html
@@ -46,7 +46,7 @@
     </div>
     <div class="col-sm">
       <h3><i class="fas fa-clock"></i> Uhrzeit</h3>
-      <p><h5> Online: <br>25./26. April: 14 - 18 Uhr<br> 27. April: 13 - 18 Uhr<br> Messetag: <br> 28. April: 10 - 16 Uhr</h5></p>
+      <p><h5> Online: <br>25. - 27. April: 13 - 18 Uhr <br> Messetag: <br> 28. April: 10 - 16 Uhr</h5></p>
     </div>
   </div>
 
