--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,17 +18,19 @@
       <!-- Navbar Items-->
       <ul class="navbar-nav ml-auto">
         <li class="nav-item mx-1 mx-lg-1">
-          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="programm.html">Programm</a>
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger text-center" href="programm.html">Programm</a>
         <li class="nav-item mx-1 mx-lg-3">
-          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="online_katalog.html">Online Katalog
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger text-center" href="online_katalog.html">Online
+            Katalog
             2022</a>
         <li class="nav-item mx-1 mx-lg-1">
-          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="unternehmen.html">Für Unternehmen</a>
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger text-center" href="unternehmen.html">Für
+            Unternehmen</a>
         <li class="nav-item mx-1 mx-lg-1">
-          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="archiv.html">Archiv</a>
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger text-center" href="archiv.html">Archiv</a>
         <li class="nav-item mx-1 mx-lg-1">
-          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://pep-dortmund.org/jobboerse/"
-            target="_blank" rel="noopener noreferrer">Jobbörse</a>
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger text-center"
+            href="https://pep-dortmund.org/jobboerse/" target="_blank" rel="noopener noreferrer">Jobbörse</a>
       </ul>
     </div>
   </div>
