--- a/_includes/carousel_catalog.html
+++ b/_includes/carousel_catalog.html
@@ -26,7 +26,7 @@
                 <img src={{unternehmen.ad}} alt="" style="width:90%;">
               </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-xl-4 col-lg-4">
               <div class="row pt-3 py-3" style="row-gap: 20px;">
                 <div class="container pt-2 bg-secondary text-white rcorners">
                   <h5> Kontakt </h5>
