--- a/_includes/programm.html
+++ b/_includes/programm.html
@@ -34,7 +34,7 @@
   </tr>
   <tr>
     <td>14-15 Uhr</td>
-    <td> <a href="https://www.cgi.com/de" >CGI </a></td>
+    <td> <a href="https://www.cgi.com/de/de/karriere/space/jobs-in-der-raumfahrt" >CGI </a></td>
     <td> <a href="https://point-8.de/" >Point 8 </a></td>
     <td> <a href="https://www.deichmann-karriere.de/jobsuche/?" >Deichmann </a></td>
   </tr>
