--- a/_layouts/archiv_layout.html
+++ b/_layouts/archiv_layout.html
@@ -4,11 +4,11 @@
 
 <body>
   {% include navbar.html %}
-  {% include archiv.html %}
-  {% include katalog_2021.html %}
-  {% include katalog_2020.html %}
-  {% include katalog_2019.html %}
-  <!-- Scripts -->
+  {% include archiv/archiv.html %}
+  {% include archiv/katalog_2022.html name="archiv_katalog_2022" %}
+  {% include archiv/katalog_2021.html %}
+  {% include archiv/katalog_2020.html %}
+  {% include archiv/katalog_2019.html %}
   {% include scripts.html %}
 </body>
 
