--- a/_layouts/katalog_layout.html
+++ b/_layouts/katalog_layout.html
@@ -4,7 +4,7 @@
 
 <body>
   {% include navbar.html %}
-  {% include programm/programm.html %}
+  {% include katalog/katalog.html name="katalog" %}
   {% include scripts.html %}
 </body>
 
