--- a/_layouts/unternehmen_layout.html
+++ b/_layouts/unternehmen_layout.html
@@ -4,8 +4,7 @@
 
 <body>
   {% include navbar.html %}
-  {% include unternehmen.html %}
-  <!-- Scripts -->
+  {% include unternehmen/unternehmen.html %}
   {% include scripts.html %}
 </body>
 
