--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,10 +2,10 @@
   <meta charset="utf-8">
 
   <!-- Title -->
-  <title>PhysiKon2022 - PeP et. al.</title>
+  <title>PhysiKon 2023 - PeP et. al.</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Die Jobmesse für Physiker/innen an der TU Dortmund">
+  <meta name="description" content="Die Jobmesse für Physiker:innen an der TU Dortmund">
   <meta name="author" content="PeP et al. e.V.">
 
   <!-- CSS -->
@@ -15,13 +15,13 @@
   <link href="/css/freelancer.css" rel="stylesheet">
 
   <!-- OpenStreetMap -->
-  <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/css/ol.css" type="text/css">
-
+  <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/css/ol.css"
+    type="text/css">
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
   <!-- Roboto Font -->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
- </head>
+</head>
