--- a/_includes/index/header.html
+++ b/_includes/index/header.html
@@ -1,11 +1,6 @@
-<!-- Header -->
-
 <div class="jumbotron jumbotron-fluid physikon-jumbotron px-3 text-white text-center">
   <img class="header-logo" src="img/logos-physikon/logo-pfeil-gruen.svg" alt="PhysiKon">
-  <h2 class="gray">25. - 27. April 2022 <A href="programm.html"> Online Vorträge</A> <br>
-    13 - 18 Uhr <br> <A href="https://tu-dortmund.zoom.us/meeting/register/tJcrduyrqjsvGNY2hORq-oBAoQMhVFmooIjU"> Zoom</A> <br><br>
-    28. April 2022 Jobmesse <br>
-    10 - 16 Uhr <br> TU Dortmund, Emil-Figge-Str. 50, 44227 Dortmund
+  <h2 class="gray">Im Frühling 2023 geht es wieder los! <br>
   </h2>
 </div>
 
@@ -16,7 +11,7 @@
   <div class="row">
     <div class="col-12 col-lg-4 mt-2">
       <p class="font-weight-light">
-        Du bist auf der Suche nach einem Job nach dem Studium, einem Praktikum oder Werkstudentenjob?
+        Du bist auf der Suche nach einem Job nach dem Studium, einem Praktikum oder Werkstudierendenjob?
       </p>
     </div>
 
@@ -38,7 +33,6 @@
     Dann komm vorbei!
   </p>
 
-  <!--PeP & TU Logo -->
   <div class="row">
     <div class="col-12 col-lg-6 mt-3">
       <img src="img/logo_weiss.svg" alt="" style="width: 100%; max-width: 350px;">
