Minor change in phrasing

--- a/_includes/katalog/katalog.html
+++ b/_includes/katalog/katalog.html
@@ -6,7 +6,8 @@
   <hr class="star-dark">
 
   <p style="font-size: 1.2rem">
-    Hier findet ihr ab dem Frühjahr 2023 die Unternehmen, die sich euch bei der PhysiKon vorstellen wollen.
+    Hier findet ihr ab dem Frühjahr 2023 den Katalog mit den Unternehmen, die sich euch auf der PhysiKon vorstellen
+    wollen.
     Seid dabei!
   </p>
 
