--- a/_includes/archiv/archiv.html
+++ b/_includes/archiv/archiv.html
@@ -1,10 +1,8 @@
 <div class="container pt-5">
   <h2>Archiv</h2>
   <p style="font-size: 1.2rem">
-    Bei Anmerkungen zum Archiv, melden Sie sich bei uns unter <a
+    Bei Anmerkungen zum Archiv oder Fragen zu den Veranstaltungen der letzten Jahre meldet euch bei uns unter <a
       href="mailto:physikon@pep-dortmund.org">physikon@pep-dortmund.org</a>.
-    <br>
-    Wir freuen uns auf Ihre Fragen und Anmerkungen.
   </p>
 </div>
 
